--- a/style.css
+++ b/style.css
@@ -237,6 +237,7 @@ border-radius: 7px;
         #ff512f 100%
         );
     display: flex;
+    flex-direction: column;
     border-radius: 13px 13px 0 0;
     justify-content:space-evenly;
     margin-top: 60px;
@@ -257,8 +258,6 @@ border-radius: 7px;
 }
 
 /* Media Queries*/
-
-
 @media (min-width: 768px){
 
 .navbar{
